--- a/main.css
+++ b/main.css
@@ -1,26 +1,36 @@
-body{
+body {
     margin: 0;
 }
 
-.container{
+.container {
     margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     max-width: 800px;
     /*background-color: purple;*/
-    .status-bar{
+
+    .status-bar {
         display: flex;
         gap: 1em;
         font-size: 3em;
     }
-    img{
+
+    img {
         max-width: 600px;
     }
 }
 
-.character{
+.character {
     position: absolute;
     bottom: 0;
     right: 0;
+}
+
+.emotion-message {
+    padding: 1em 2em;
+    border: 3px dotted black;
+    border-radius: 75px;
+    font-size: 3em;
+    max-width: fit-content;
 }
